@@ -1,3 +1,9 @@
+Build 5 February 26, 2018
+===========================
+
+1. Added new game: The Sun.
+
+
 Build 4 February 21, 2018
 ===========================
 
